--- a/MyHealth.API.Body/MyHealth.API.Body/MyHealth.API.Body.csproj
+++ b/MyHealth.API.Body/MyHealth.API.Body/MyHealth.API.Body.csproj
@@ -4,10 +4,11 @@
     <AzureFunctionsVersion>v3</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.20.1" />
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.13" />
-    <PackageReference Include="MyHealth.Common" Version="1.5.5" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MyHealth.API.Body.Services\MyHealth.API.Body.Services.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
